--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                 <h2>Math is calculating.</h2>
                 <div class="subtitle">With Math, I can add and subtract things! + - </div>
                 <div class="math-problem">20 🧑‍🎓 + 1 👨‍🏫 = 21 👥</div>
-                <div class="math-problem">🍎🍎🍎 - 🍎 = 🍎🍎</div>
+                <div class="math-problem">🍎🍎🍎 - 🍎🍎 = 🍎</div>
             </div>
         </div>
         
