--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
             <div class="slide-content">
                 <h2>Why I Love Math! ❤️</h2>
                 <div class="message-box">
-                    <p>Math is fun and it helps us<br>builds our brain!</p>
+                    <!-- <p>Math is fun and it helps us<br>builds our brain!</p> -->
                 </div>
             </div>
         </div>
@@ -618,8 +618,8 @@
                 <div class="sparkle" style="top: 40%; left: 90%; animation-delay: 2.5s;"></div>
             </div>
             <div class="slide-content">
-                <h2>Math is numbers.</h2>
-                <div class="subtitle">With Math, I can count! 🎯</div>
+                <h2>Math is Numbers.</h2>
+                <!-- <div class="subtitle">With Math, I can count! 🎯</div> -->
                 <div class="numbers">
                     <div class="number-box">1</div>
                     <div class="number-box">2</div>
@@ -637,8 +637,8 @@
                 <div class="floating-shape" style="width: 85px; height: 85px; background: rgba(255,255,255,0.15); top: 70%; left: 80%; animation-delay: -6s;"></div>
             </div>
             <div class="slide-content">
-                <h2>Math is shapes.</h2>
-                <div class="subtitle">With Math, I know so many fun shapes! 🎨</div>
+                <h2>Math is Shapes.</h2>
+                <!-- <div class="subtitle">With Math, I know so many fun shapes! 🎨</div> -->
                 <div class="shapes">
                     <div class="shape-item">
                         <div class="shape circle"></div>
@@ -664,8 +664,8 @@
                 <div class="sparkle" style="top: 45%; left: 85%; animation-delay: 2.3s;"></div>
             </div>
             <div class="slide-content">
-                <h2>Math is calculating.</h2>
-                <div class="subtitle">With Math, I can add and subtract things! + - </div>
+                <h2>Math is Calculating.</h2>
+                <!-- <div class="subtitle">With Math, I can add and subtract things! + - </div> -->
                 <div class="math-problem">🍎🍎🍎 - 🍎🍎 = 🍎</div>
                 <div class="math-problem">20 🧑‍🎓 + 1 👨‍🏫 = 21 👥</div>
             </div>
